--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JB PISOS | Laminado e Vinílico em Campinas e Valinhos</title>
+<title>JB PISOS | Laminado e Vinílico em Campinas e Região</title>
 
 <style>
 
@@ -203,7 +203,7 @@ font-size:28px;
 </header>
 
 <section class="hero">
-<h2>Piso Laminado e Vinílico com Instalação Profissional</h2>
+<h2>Piso Laminado e Vinílico com Instalação</h2>
 <p>Atendemos Campinas e Valinhos com qualidade, agilidade e acabamento impecável.</p>
 <br>
 <a class="btn" href="https://wa.me/555555555555" target="_blank">Solicitar Orçamento</a>
