--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ font-size:28px;
 
 <section class="hero">
 <h2>Piso Laminado e Vinílico com Instalação</h2>
-<p>Atendemos Campinas e Valinhos com qualidade, agilidade e acabamento impecável.</p>
+<p>Atendemos Campinas e Região com qualidade, agilidade e acabamento impecável.</p>
 <br>
 <a class="btn" href="https://wa.me/555555555555" target="_blank">Solicitar Orçamento</a>
 </section>
@@ -254,7 +254,7 @@ WhatsApp
 </a>
 
 <footer>
-© 2026 JB PISOS - Campinas e Valinhos, SP
+© 2026 JB PISOS - Campinas e Região
 </footer>
 
 </body>
