--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@ border-radius:12px;
 box-shadow:0 8px 25px rgba(0,0,0,0.08);
 }
 
-.galeria{
+.{
 display:flex;
 flex-wrap:wrap;
 justify-content:center;
 gap:20px;
 }
 
-.galeria img{
+. img{
 width:300px;
 border-radius:10px;
 transition:0.3s;
 }
 
-.galeria img:hover{
+. img:hover{
 transform:scale(1.05);
 }
 
@@ -196,7 +196,7 @@ font-size:28px;
 <h1>JB PISOS</h1>
 <nav>
 <a href="#servicos">Serviços</a>
-<a href="#galeria">Galeria</a>
+<a href="#"></a>
 <a href="#marcas">Marcas</a>
 <a href="https://wa.me/555555555555" target="_blank">Orçamento</a>
 </nav>
@@ -227,10 +227,10 @@ font-size:28px;
 </div>
 </section>
 
-<section id="galeria" class="section">
+<section id="" class="section">
 <h2>Galeria de Trabalhos</h2>
 <div class="galeria">
-<img src="foto1.jpg">
+<img src="sala1.jpg">
 <img src="foto2.jpg">
 <img src="foto3.jpg">
 </div>
