--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ font-size:28px;
 <h2>Galeria de Trabalhos</h2>
 <div class="galeria">
 <img src="sala1.jpg">
-<img src="foto2.jpg">
-<img src="foto3.jpg">
+<img src="sala2.jpg">
+<img src="sala3.jpg">
 </div>
 <br><br>
 <a class="btn" href="https://wa.me/555555555555" target="_blank">Quero Meu Orçamento</a>
