--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ font-size:28px;
 </div>
 <div class="card">
 <h3>Instalação Completa</h3>
-<p>Equipe especializada garantindo acabamento de alto padrão.</p>
+<p>garantindo acabamento de alto padrão.</p>
 </div>
 </div>
 </section>
