--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@ font-size:28px;
 <section id="" class="section">
 <h2>Galeria de Trabalhos</h2>
 <div class="galeria">
-<img src="sala1.jpg">
-<img src="sala2.jpg">
-<img src="sala3.jpg">
+<img src="saala1.png">
+<img src="saala2.png">
+<img src="saala3.png">
 </div>
 <br><br>
 <a class="btn" href="https://wa.me/555555555555" target="_blank">Quero Meu Orçamento</a>
