--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ margin-bottom:30px;
 }
 
 .btn{
-background:#b8921f;
+background:#56db4d;
 color:black;
 padding:15px 35px;
 text-decoration:none;
@@ -81,7 +81,7 @@ transition:0.3s;
 }
 
 .btn:hover{
-background:#b8921f;
+background:#56db4d;
 }
 
 .section{
