--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ margin-bottom:30px;
 
 .btn{
 background:#56db4d;
-color:black;
+color:white;
 padding:15px 35px;
 text-decoration:none;
 font-weight:bold;
