--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ margin-bottom:30px;
 }
 
 .btn{
-background:#56db4d;
+background:#25d366;
 color:white;
 padding:15px 35px;
 text-decoration:none;
@@ -81,7 +81,7 @@ transition:0.3s;
 }
 
 .btn:hover{
-background:#56db4d;
+background:#25d366;
 }
 
 .section{
