--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ letter-spacing:2px;
 nav a{
 color:white;
 text-decoration:none;
-margin-left:25px;
+margin: 0 12px;
 font-weight:500;
 transition:0.3s;
 }
