--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ width:100%;
 background:#111;
 color:white;
 display:flex;
-justify-content:space-between;
+justify-content:flex-start;
 align-items:center;
+gap:40px;
 padding:15px 40px;
 z-index:1000;
 }
