--- a/index.html
+++ b/index.html
@@ -240,7 +240,13 @@ font-size:28px;
 
 <section id="marcas" class="marcas">
 <h2>Trabalhamos com as Melhores Marcas</h2>
-<p>Durafloor • Eucafloor • Tarkett • Quick-Step • Santa Luzia</p>
+<div class="marcas-logos">
+  <img src="img/durafloor.png" alt="Durafloor">
+  <img src="img/eucafloor.png" alt="Eucafloor">
+  <img src="img/tarkett.png" alt="Tarkett">
+  <img src="img/quickstep.png" alt="Quick-Step">
+  <img src="img/santaluzia.png" alt="Santa Luzia">
+</div>
 </section>
 
 <section class="cta">
