--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@ font-size:28px;
 <section id="marcas" class="marcas">
 <h2>Trabalhamos com as Melhores Marcas</h2>
 <div class="marcas-logos">
-  <img src="img/durafloor.png" alt="Durafloor">
-  <img src="img/eucafloor.png" alt="Eucafloor">
-  <img src="img/tarkett.png" alt="Tarkett">
-  <img src="img/quickstep.png" alt="Quick-Step">
-  <img src="img/santaluzia.png" alt="Santa Luzia">
+  <img src="durafloor.png" alt="Durafloor">
+  <img src="eucafloor.png" alt="Eucafloor">
+  <img src="tarkett.png" alt="Tarkett">
+  <img src="quick-step.png" alt="Quick-Step">
+  <img src="santa-luzia.png" alt="Santa Luzia">
 </div>
 </section>
 
