--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ font-size:28px;
 <section id="marcas" class="marcas">
 <h2>Trabalhamos com as Melhores Marcas</h2>
 <div class="marcas-logos">
-  <img src="durafloor.png" alt="Durafloor">
+  <img src="duraflor.png" alt="Duraflor">
   <img src="eucafloor.png" alt="Eucafloor">
   <img src="tarkett.png" alt="Tarkett">
   <img src="quick-step.png" alt="Quick-Step">
