--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@ transform:scale(1.05);
 background:#fff;
 padding:70px 20px;
 }
+  
+.marcas-logos{
+display:flex;
+justify-content:center;
+align-items:center;
+gap:40px;
+flex-wrap:wrap;
+}
+
+.marcas-logos img{
+height:50px;
+width:auto;
+}
 
 .marcas h2{
 margin-bottom:30px;
